--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <Menu Height="20" VerticalAlignment="Top">
+            <MenuItem Header="_File">
+                <MenuItem Header="_New" Click="MenuNewSelect"/>
+            </MenuItem>
+        </Menu>
     </Grid>
 </Window>
