--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,9 @@
         <Menu Height="20" VerticalAlignment="Top">
             <MenuItem Header="_File">
                 <MenuItem Header="_New" Click="MenuNewSelect"/>
-            </MenuItem>
+            </MenuItem>            
         </Menu>
+        <TextBox HorizontalAlignment="Stretch" Margin="0,20,0,20" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Stretch"/>
+        <TextBlock Height="20" HorizontalAlignment="Left" Margin="0,0,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
