Förberedde meddelandelist nederst för lagring av filnamn

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,6 +13,6 @@
             </MenuItem>            
         </Menu>
         <TextBox HorizontalAlignment="Stretch" Margin="0,24,0,24" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Stretch" FontSize="16"/>
-        <TextBlock Height="24" HorizontalAlignment="Stretch" Margin="0,0,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="16"/>
+        <TextBlock Name="MessageBar" Height="24" HorizontalAlignment="Stretch" Margin="0,0,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Bottom" FontSize="16"/>
     </Grid>
 </Window>
